# gumdrop-studio

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  OVERVIEW.md  README.md  SETUP.md  WARP.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  wrangler.toml
.codex/: AGENTS.md  plan-gumdropStudioDesktop.prompt.md
.github/: AGENTS.md  FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
public/: _redirects  _routes.json  index.html
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Canvas.jsx  ColorWheel.jsx  Footer.jsx  Header.jsx  ProjectPanel.jsx  ToolPanel.jsx
src/utils/: canvas.js  colors.js  desktop.js  helpers.js  rasterizers.js  storage.js
website/: astro.config.mjs  package-lock.json  package.json  wrangler.toml
website/src/content/docs/: index.mdx
website/src/content/docs/getting-started/: installation.mdx  quick-start.mdx
website/src/content/docs/guides/: canvas.md  colors.md  exporting.mdx  projects.mdx  tools.md
website/src/content/docs/reference/: keyboard-shortcuts.mdx
website/src/styles/: custom.css
